--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,261 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing: border-box !important;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+body{
+  background-color: #0c090b;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
   margin: 0;
+}
+
+
+.header-root{
+  width: 100%;
+  height: 96px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: row;
+  align-items: center;
+  gap: 1em;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+button{
+  background-color: transparent;
+  border-style: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+button:hover{
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.material-symbols-sharp {
+  background-color: transparent;
+  height: 32px;
+  width: 32px;
+  font-size: 32px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-variation-settings:
+  'FILL' #FFFF,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 32
+}
+
+.menu-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1em;
+  padding: 1em;
+}
+
+.logo{
+  height: 32px;
+}
+
+input{
+  background-color: #222222;
+  height: 46px;
+  border-style: none;
+  outline: none;
+  max-width: 416px;
+  width: 100%;
+  color: white;
+  padding: 1em auto auto auto;
+}
+
+.searchbar-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  padding: 0 1em;
+}
+
+.pp-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.pp{
+  margin: auto 0;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+}
+
+.sidebar{
+  min-height: 100%;
+  width: 88px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-right: 1px solid #303030;
+  padding: 0 1em;
+}
+
+.menu-item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0.25em;
+  width: fit-content;
+  padding: 1em;
+}
+
+a:hover{
+  cursor: pointer;
+}
+
+.chiplist{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1em;
+  padding: 0 2.5em;
+}
+
+.chip{
+
+  background-color: #222222;
+  border-radius: .5em;
+  padding: 1em;
+}
+
+.card{
+
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.card p{
+
+  margin-block: .25em;
+}
+
+.card img{
+  box-sizing: border-box;
+  width: 180px;
+  height: 180px;
+  border-radius: .5em;
+  margin-bottom: 0.7em;
+}
+
+.card-description{
+  color: grey;
+}
+
+.carousel{
+  display: flex;
+  flex-direction: column;
+  margin: 0 2.5em;
+  margin-top: 4em;
+  overflow: hidden;
+
+}
+
+.carousel-header{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 2em;
+}
+
+.carousel-body{
+  display: flex;
+  flex-direction: row;
+  gap: 3em;
+}
+
+.artist-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.artist-card img{
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  margin-bottom: 0.7em;
+}
+
+.artist-card p{
+  margin-block: 0.25em;
+}
+
+.play-bar{
+  display: flex;
+  position: fixed;
+  inset: auto 0 0 0;
+  width: 100%;
+  height: 78px;
+  background-color: #282828;
+  padding: 0 1.5em;
+  justify-content: space-between;
+}
+
+.song-grid{
+  display: grid;
+  width: 100%;
+  grid-template-columns: auto auto auto auto;
+  gap: 2em;
+}
+
+.song-list-item{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5em;
+  overflow: hidden;
+}
+
+.song-list-item img{
+  width: 48px;
+  height: 48px;
+}
+
+.song-list-item div{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+}
+
+.song-list-item div p{
+  margin-block: auto;
+}
+
+.icon-button{
+  padding: 0;
+  margin: 0;
+}
+
+.seek-bar{
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.302);
+  width: -webkit-fill-available;
+  position: absolute;
+  inset: -2px auto auto -1.5em;
+
+}
+
+.seek-bar:hover{
+  cursor: pointer;
+  height: 4px;
+}
+
+.progressed-bar{
+  background-color: #FF0000;
+  width: calc(73px + 1.5em);
+  height: 100%;
+  opacity: 100%;
+  position: relative;
 }
