--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,7 @@ input{
 }
 
 .sidebar{
+  transition: all 0.3s;
   min-height: 100%;
   width: 88px;
   display: flex;
@@ -108,6 +109,10 @@ input{
   border-radius: 0.25em;
   width: fit-content;
   padding: 1em;
+}
+
+.menu-item:hover{
+  background-color: #222222;
 }
 
 a:hover{
@@ -258,4 +263,19 @@ a:hover{
   height: 100%;
   opacity: 100%;
   position: relative;
+}
+
+.round-button{
+  background-color: #282828;
+  border-radius: 50px;
+  height: 48px;
+  padding: 1em;
+  display: flex;
+  flex-direction: row;
+  gap: 1.5em;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 16px;
+  width: 100%;
 }
