--- a/src/index.css
+++ b/src/index.css
@@ -59,15 +59,21 @@ button:hover{
 }
 
 input{
-  background-color: #222222;
-  height: 46px;
-  border-style: none;
   outline: none;
-  max-width: 416px;
-  width: 100%;
   color: white;
   padding: 1em auto auto auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center; 
+  background-color: rgb(34, 34, 34); 
+  height: 48px; 
+  border: 1px solid rgb(48, 48, 48); 
+  border-radius: 0.25em; 
+  max-width: 350px; 
+  width: 100%;  
 }
+
+
 
 .searchbar-container{
   display: flex;
@@ -138,7 +144,6 @@ a:hover{
 
   display: flex;
   flex-direction: column;
-  
 }
 
 .card p{
@@ -220,6 +225,7 @@ a:hover{
   align-items: center;
   gap: 0.5em;
   overflow: hidden;
+  width: 100%;
 }
 
 .song-list-item img{
@@ -278,4 +284,25 @@ a:hover{
   color: white;
   font-size: 16px;
   width: 100%;
+}
+
+.playlist-create{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.sidebar-playlist{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 1em;
+  margin-top: 3em;
+}
+
+button:disabled{
+  background-color: white !important;
+  color: grey !important;
 }
